chore: code review  reproducibility, cross-platform, dead code, README
Fixes from senior engineer code review:
- Add comprehensive README.md with prerequisites and setup steps
- Add FOUC prevention script in index.html (restores saved theme)
- Fix titleBarStyle: hiddenInset is macOS-only, use frame:true on Windows
- Add ES2022 target/lib to tsconfig.node.json (was defaulting to ES3)
- Remove unused imports (Monitor, Palette) from SettingsView
- Wrap database init in try/catch with graceful quit on failure
- Fix rebuild script: auto-detect Electron version, cross-platform
- Expand .gitignore: tsbuildinfo, IDE dirs, OS files, db-shm

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "electron-vite dev",
     "build": "electron-vite build",
     "start": "electron-vite preview",
-    "rebuild": "node-gyp rebuild --directory node_modules/better-sqlite3",
+    "rebuild": "node -e \"const v=require('./node_modules/electron/package.json').version; const {execSync}=require('child_process'); execSync('npx node-gyp rebuild --directory node_modules/better-sqlite3 --runtime=electron --target='+v+' --dist-url=https://electronjs.org/headers', {stdio:'inherit'})\"",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json",
     "typecheck:web": "tsc --noEmit -p tsconfig.web.json",
     "typecheck": "npm run typecheck:node && npm run typecheck:web"
