--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,28 @@
 node_modules/
 dist/
 out/
-.env
+
+# Database
 *.db
 *.db-journal
 *.db-wal
+*.db-shm
 data/
+
+# Environment
+.env
+.env.local
+.env.*.local
+
+# TypeScript build info
+*.tsbuildinfo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
