--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -8,6 +8,10 @@
         "outDir": "./out",
         "rootDir": ".",
         "strict": true,
+        "target": "ES2022",
+        "lib": [
+            "ES2022"
+        ],
         "skipLibCheck": true,
         "resolveJsonModule": true,
         "isolatedModules": true,
