--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-table": "^8.20.0",
     "@tanstack/react-virtual": "^3.10.0",
-    "better-sqlite3": "^11.6.0",
+    "better-sqlite3": "^12.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.460.0",
@@ -41,6 +41,7 @@
     "electron": "^40.6.1",
     "electron-builder": "^25.1.0",
     "electron-vite": "^5.0.0",
+    "node-gyp": "^12.2.0",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.5.0",
     "vite": "^6.0.0"
