--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.460.0",
     "pdf-parse": "^2.4.5",
+    "pdfjs-dist": "^5.4.624",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-pdf": "^10.4.0",
     "react-resizable-panels": "^2.1.0",
     "tailwind-merge": "^2.5.0",
     "uuid": "^10.0.0"
